--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,12 @@
+@import "./reset.css";
+@import url("https://fonts.googleapis.com/css2?family=Mate+SC&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Mate+SC&display=swap");
+
 body {
     display: flex;
     flex-flow: column;
+    font-family: "Mate SC", serif;
+    background-color: #fdfff0;
 }
 
 .my_dataviz{
