--- a/src/styles/hireMeModal.css
+++ b/src/styles/hireMeModal.css
@@ -109,6 +109,7 @@
     background-color: #738F9B;
     color: white;
     font-weight: 400;
+    font-size: 1.5em;
     border-radius: .5em;
     border: none;
     height: 2em;
@@ -117,8 +118,8 @@
     top: 0;
     right: 0;
     margin: .5em;
-    width: 5em;
-    height: 3em;
+    /* width: 5em;
+    height: 3em; */
 }
 
 #hire-me-btn:hover{
