better bad input handling

--- a/src/styles/search.scss
+++ b/src/styles/search.scss
@@ -19,6 +19,14 @@
     align-self: center;
 }
 
+#search-error-div{
+  position: absolute;
+  /* margin-top: 0.75em; */
+  font-size: 1.5vw;
+  align-self: center;
+}
+
+
 #clearSearchButton{
     width: 10%;
     height: 80%;
