--- a/src/styles/d3.css
+++ b/src/styles/d3.css
@@ -79,3 +79,11 @@
     text-align: center;
     font-size: 3vmin;
 }
+
+.legend-text{
+    font-size: 1.5em;
+}
+
+.legend-nodes:hover{
+    cursor: pointer;
+}
