--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,3 +31,10 @@ body {
   cursor: pointer;
   background-color: #bad1db;
 }    
+
+#siteTitle{
+    position: absolute;
+    margin: .6em .75em;
+    font-size: 3em;
+    color: #537e91;
+}
