--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -24,7 +24,7 @@ body {
     align-self: flex-end;position: absolute;
     top: 0;
     right: 0;
-    margin: .5em;
+    margin: 0em 0.5em;
 }
 
 #hire-me-btn:hover{
