--- a/src/styles/hireMeModal.css
+++ b/src/styles/hireMeModal.css
@@ -117,7 +117,7 @@
     position: absolute;
     top: .5em;
     right: 0;
-    margin: .5em;
+    margin: 0em 0.5em;
     /* width: 5em;
     height: 3em; */
 }
